tests/parser/fail/brokenvardecl.go
package testdata

func testBadVar() {
    // Esqueceu o nome da variável
    var int = 10

    // Esqueceu o valor depois do igual
    var y int =

    // Tentou declarar sem o 'var' e sem o ':='
    z int = 5
}
